Replaced gif with smaller jpeg

--- a/sp-themes/clean-home-sp/style.css
+++ b/sp-themes/clean-home-sp/style.css
@@ -7,7 +7,7 @@ Template: clean-home
 /* Override some of the clean-home styles */
 .header {
 	padding: 5px 0 0 0;
-	background: url(images/willhack.gif) top left no-repeat rgb(255,255,255);
+	background: url(images/willhack.jpg) top left no-repeat rgb(255,255,255);
 	height: 125px;
 }
 
