--- a/sp-themes/clean-home-sp/style.css
+++ b/sp-themes/clean-home-sp/style.css
@@ -34,7 +34,19 @@ Template: clean-home
 	margin-bottom: 10px;
 }
 
-/* Define some DCS specific styles */
+.hentry img,
+body.attachment .navigation img {
+	background: #eee;
+	border: 3px solid #ddd;
+	margin: 0px 10px 5px;
+	padding: 5px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	clear: left;
+}
+
+/* Define some SP specific styles */
 #theme-credit {
 	float: left;
 }
