--- a/sp-themes/clean-home-sp/style.css
+++ b/sp-themes/clean-home-sp/style.css
@@ -47,6 +47,9 @@ body.attachment .navigation img {
 }
 
 /* Define some SP specific styles */
+#resource {
+	clear: both;
+}
 #theme-credit {
 	float: left;
 }
